# trex

./: README.md
asrl__control__tether_management/: package.xml
asrl__control__tether_management/.svn/: wc.db
asrl__control__tether_management/msg/: controlState_new.msg  motorControl.msg  tetherControlType.msg
asrl__control__tether_management/scripts/: joyMotorCommand.py  tensionMotorCommand_FFFB_current.py  tensionMotorCommand_FFFB_playgroundVTR2_ICRA16.py
asrl__drivers__labjack/: CMakeLists.txt
asrl__drivers__labjack/.svn/: wc.db
asrl__drivers__labjack/include/: LJInterface.hpp
asrl__drivers__labjack/msg/: writeNames.msg
asrl__drivers__labjack/srv/: readAddresses.srv  readNames.srv  readSPI.srv
asrl__robots__husky_trex/: package.xml
asrl__robots__husky_trex/.svn/: wc.db
asrl__robots__husky_trex/launch/: base_station_monitor.launch  base_station_monitor.launch~  husky_climber_urdf_new.xml~  husky_gamepad_climber.launch  husky_gamepad_only.launch  husky_gamepad_only.launch~  rosbag_record_trex.launch~
asrl__robots__husky_trex/launch/mapping_gains/: curvature_thresholds.yaml
asrl__robots__husky_trex/scripts/: batteryMonitor.py  husky_dgrp_50_xbox_setup.sh  tf_pulley_broadcaster.py  tf_skybotix_broadcaster.py  tf_spool_broadcaster.py
asrl__robots__husky_trex/src/: asrl_husky_trex.cpp
asrl__sensors__trex/: CMakeLists.txt  package.xml
asrl__sensors__trex/.svn/: wc.db
asrl__sensors__trex/launch/: sensors_run.launch
asrl__sensors__trex/msg/: forceCell.msg  magEncoder.msg
asrl__sensors__trex/scripts/: inclinationPub_armMountedIMU.py  (+7 more)
(+21 files in other folders)
