
<package>
	<name>asrl__robots__husky_trex</name>
	<version>0.0.0</version>
	<maintainer email="patrick.mcgarey@robotics.utias.utoronto.ca">Patrick McGarey</maintainer>
    <description>
     Adapter providing the ASRL standard vehicle interface for the Clearpath Horizon protocol with the Climbing Payload.
	</description>

	<author>Chi</author>
	<license>BSD</license>
	<url>http://ros.org/wiki/asrl_clearpath</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>clearpath_base</build_depend>
    <build_depend>asrl__robots__vehicle</build_depend>
    <build_depend>asrl__common__library</build_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>digi_realport_serial_ethernet</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>clearpath_base</run_depend>
    <run_depend>asrl__robots__vehicle</run_depend>
    <run_depend>asrl__common__library</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>digi_realport_serial_ethernet</run_depend>
    <run_depend>xboxdrv_linux</run_depend>
</package>


